# vnef-video

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
bindings/odin/: vnef_video.odin
examples/: dump_info.c  odin_dump.odin
include/: vnef_video.h
src/: vnef_video.c
